--- a/DCPU16_IDE.cbp
+++ b/DCPU16_IDE.cbp
@@ -81,6 +81,8 @@
 		<Unit filename="deps/imgui/imgui_draw.cpp" />
 		<Unit filename="deps/imgui/imgui_widgets.cpp" />
 		<Unit filename="deps/imgui/misc/freetype/imgui_freetype.cpp" />
+		<Unit filename="deps/imguicolortextedit/TextEditor.cpp" />
+		<Unit filename="deps/imguicolortextedit/TextEditor.h" />
 		<Unit filename="deps/toolkit/base_serialisables.cpp" />
 		<Unit filename="deps/toolkit/clipboard.cpp" />
 		<Unit filename="deps/toolkit/clock.cpp" />
