--- a/DCPU16_IDE.cbp
+++ b/DCPU16_IDE.cbp
@@ -24,7 +24,54 @@
 					<Add option="-O2" />
 				</Compiler>
 				<Linker>
+					<Add option="-O2" />
 					<Add option="-s" />
+				</Linker>
+			</Target>
+			<Target title="ReleaseStatic">
+				<Option output="bin/ReleaseStatic/DCPU16_IDE" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/ReleaseStatic/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option projectLinkerOptionsRelation="1" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-DSFML_STATIC" />
+					<Add option="-DGLEW_STATIC" />
+					<Add option="-DGRAPHITE2_STATIC" />
+				</Compiler>
+				<Linker>
+					<Add option="-O2" />
+					<Add option="-s" />
+					<Add option="-lmingw32" />
+					<Add option="-l:libssl.a" />
+					<Add option="-l:libglfw3.a" />
+					<Add option="-l:libglew32.a" />
+					<Add option="-lsfml-audio-s" />
+					<Add option="-lsfml-system-s" />
+					<Add option="-Wl,--start-group" />
+					<Add option="-l:libharfbuzz.a" />
+					<Add option="-l:libfreetype.a" />
+					<Add option="-Wl,--end-group" />
+					<Add option="-l:libgraphite2.a" />
+					<Add option="-lopengl32" />
+					<Add option="-l:libflac.a" />
+					<Add option="-l:libpng.a" />
+					<Add option="-l:libz.a" />
+					<Add option="-l:libbz2.a" />
+					<Add option="-l:librpcrt4.a" />
+					<Add option="-l:libopenal.a" />
+					<Add option="-logg" />
+					<Add option="-lole32" />
+					<Add option="-ldbgeng" />
+					<Add option="-lwinmm" />
+					<Add option="-l:libcrypto.a" />
+					<Add option="-lUsp10" />
+					<Add option="-lgdi32" />
+					<Add option="-lws2_32" />
+					<Add option="-l:libbrotlidec-static.a" />
+					<Add option="-l:libbrotlienc-static.a" />
+					<Add option="-l:libbrotlicommon-static.a" />
 				</Linker>
 			</Target>
 		</Build>
@@ -36,9 +83,6 @@
 			<Add option="-DNO_COMPRESSION" />
 			<Add option="-DIMGUI_IMPL_OPENGL_LOADER_GLEW" />
 			<Add option="-DSUBPIXEL_FONT_RENDERING" />
-			<Add option="-DSFML_STATIC" />
-			<Add option="-DGLEW_STATIC" />
-			<Add option="-DGRAPHITE2_STATIC" />
 			<Add option="-DNO_OPENCL" />
 			<Add directory="deps/imgui" />
 			<Add directory="deps" />
@@ -46,34 +90,20 @@
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32" />
-			<Add option="-l:libssl.a" />
-			<Add option="-l:libglfw3.a" />
-			<Add option="-l:libglew32.a" />
-			<Add option="-lsfml-audio-s" />
-			<Add option="-lsfml-system-s" />
+			<Add option="-lglfw3" />
+			<Add option="-lglew32" />
+			<Add option="-lsfml-audio" />
+			<Add option="-lsfml-system" />
 			<Add option="-Wl,--start-group" />
-			<Add option="-l:libharfbuzz.a" />
-			<Add option="-l:libfreetype.a" />
+			<Add option="-lharfbuzz" />
+			<Add option="-lfreetype" />
 			<Add option="-Wl,--end-group" />
-			<Add option="-l:libgraphite2.a" />
+			<Add option="-lgraphite2" />
 			<Add option="-lopengl32" />
-			<Add option="-l:libflac.a" />
-			<Add option="-l:libpng.a" />
-			<Add option="-l:libz.a" />
-			<Add option="-l:libbz2.a" />
-			<Add option="-l:librpcrt4.a" />
-			<Add option="-l:libopenal.a" />
-			<Add option="-logg" />
 			<Add option="-lole32" />
 			<Add option="-ldbgeng" />
 			<Add option="-lwinmm" />
-			<Add option="-l:libcrypto.a" />
-			<Add option="-lUsp10" />
 			<Add option="-lgdi32" />
-			<Add option="-lws2_32" />
-			<Add option="-l:libbrotlidec-static.a" />
-			<Add option="-l:libbrotlienc-static.a" />
-			<Add option="-l:libbrotlicommon-static.a" />
 		</Linker>
 		<Unit filename="base_ide.hpp" />
 		<Unit filename="deps/dcpu16-asm/base_asm.hpp" />
