--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "deps/dcpu16-asm"]
 	path = deps/dcpu16-asm
 	url = https://github.com/20k/dcpu16-asm
+[submodule "deps/toml"]
+	path = deps/toml
+	url = https://github.com/ToruNiina/toml11
